# epitech_console

./: .gitignore  ANSI Escape Codes.html  ANSI.md  ChatGPT setup prompt.txt  Color_old.py  Console.py  Console_old.py  MANIFEST.in  Makefile  README.md  ROADMAP.md  __init__.py  ansi.py  auto-reload  auto_reload  install-package  pyproject.toml  setup.py  test.py
.github/workflows/: deploy-pages.yml  test-package.yml
ANSI/: ANSI.py  Color.py  Cursor.py  Line.py  __init__.py  cursor.py  line.py  test_ansi.py
ANSI Escape Codes_files/: element-registry-048f254d64b9.js  gist-9e0d69f26f5d.js  wp-runtime-1c755d3881da.js
Animation/: basepack.py
Console/: __init__.py  config.ini
Console/ANSI/: ANSI.py  Color.py  Cursor.py  Line.py  __init__.py  ansi.py  basepack.py  color.py  line.py
Console/Animation/: Animation.py  ProgressBar.py  Spinner.py  Style.py  __init__.py  animation.py  basepack.py  progressbar.py  spinner.py
Console/Error/: Error.py  __init__.py  error.py
Console/System/: Stopwatch.py  Time.py  __init__.py  config.py  console.py
Console/Text/: Animation.py  Format.py  ProgressBar.py  Text.py  __init__.py  format.py  text.py
Error/: Error.py  __init__.py
System/: config.py  stopwatch.py  time.py
Text/: Animation.py  Text.py  __init__.py  text.py
demo/: demo_animation.py  demo_ansi.py  demo_error.py  demo_system.py  demo_text.py
demo/output/: console_output_test.txt
epitech-console/: config.ini
epitech_console/: __init__.py  config.ini
old_module/: Packed_old.py
script/: auto-reload  full_demo  test  test-package
tests/: log_test.txt
(+60 files in other folders)
